can't find Hatchways or Triple Byte

--- a/templates/pages/swe_career_guide.html
+++ b/templates/pages/swe_career_guide.html
@@ -238,14 +238,23 @@
                             <li>Once you get a job Build your professional network!</li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="https://www.hatchways.io">HatchWays.io</a></span>
+                    <!-- Can't find Hatchways I know it exists, not sure what's going on. -->
+                    <!-- <li> 
+                        <a href="https://app.hatchways.io/">HatchWays.io</a></span>
                         <ul>
                             <li>Utilizing this program as a pathway to secure employment can be challenging, as Hatcdhways suggests that having a four-year degree is preferable. Nevertheless, if you possess the skills to develop projects using the technologies they assess, there is still potential to secure a job with their support.</li>
                             <li>for job sekers with no prior real world paid work experence (Internships & projects do not count as experence here) there program will help you inorder to get your foot in the door and land a job in tech.</li>
                             <li>Once you get a job Build your professional network!</li>
                         </ul>
-                    </li>
+                    </li> -->
+                    <!-- Can't find Triple Byte I know it exists, not sure what's going on. -->
+                    <!-- <li> 
+                        <a href="https://triplebyte.com">HatchWays.io</a></span>
+                        <ul>
+                            <li>...</li>
+                            <li>...</li>
+                        </ul>
+                    </li> -->
                     <!-- ***TODO: Research to better understand
                     <li>
                         <a href="https://www.codepath.org">CodePath.org</a>
