ad bug fix + other

--- a/templates/home.html
+++ b/templates/home.html
@@ -258,7 +258,7 @@
 
                 <!-- 4th Content box -->
                 <div class="row py-2 m-0">
-                    <div class="col p-2 m-0">
+                    <div class="col-12 m-0">
                         <div class="p-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
                         
                             <span>3. Explore job placement support programs, such as...</span>
@@ -286,7 +286,7 @@
                                 <li>
                                     <a href="https://www.pathrise.com">Pathrise.com</a>
                                     <ul>
-                                        <li>Cost money upfront or ISA (income share agreement)</li>
+                                        <li><b>Payment Options</b> Payment methods include upfront costs, an Income Share Agreement (ISA), or a one-year deferred loan.</li>
                                         <li>for job sekers with no prior real world paid work experence (Internships & projects do not count as experence here) there program will help you inorder to get your foot in the door and land a job in tech.</li>
                                         <li>Once you get a job Build your professional network!</li>
                                     </ul>
@@ -329,43 +329,35 @@
                     <div class="col-12 m-0">
                         <div class="text-center px-1 pt-0 m-0">
 
-                            <div class="row py-0 m-0">
-                                <div class="col-12 m-0">
-                                    <div class="text-center px-1 pt-0 m-0">
-
-                                        <div class="d-none d-lg-block col-md-auto web-ad m-0"> <!-- lg Web Ad -->
-                                        <!-- vvv code from Ad site vvv --> 
-                                        <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralTopBottom&pub=848887&format=728x90&ga=g"></script>
-                                        <noscript>
-                                            <a href="https://yllix.com/publishers/848887" target="_blank">
-                                                <img src="//ylx-aff.advertica-cdn.com/pub/728x90.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
-                                            </a>
-                                        </noscript>
-                                        <!-- ^^^ code from Ad site ^^^ -->
-                                    </div>
-                                    <div class="d-block d-lg-none col-auto web-ad m-0"> <!-- sm MOB Ad -->
-                                        <!-- vvv code from Ad site vvv -->
-                                        <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneralTopBottom&pub=848887&format=468x60&ga=g"></script>
-                                        <noscript>
-                                            <a href="https://yllix.com/publishers/848887" target="_blank">
-                                                <img src="//ylx-aff.advertica-cdn.com/pub/468x60.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
-                                            </a>
-                                        </noscript>
-                                        <!-- ^^^ code from Ad site ^^^ -->
-                                    </div>
-                                    <div class="mob-ad m-0">
-                                        <!-- vvv code from Ad site vvv -->
-                                        <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneraTopBottom&pub=848887&format=300x50&ga=g"></script>
-                                        <noscript>
-                                            <a href="https://yllix.com/publishers/848887" target="_blank">
-                                                <img src="//ylx-aff.advertica-cdn.com/pub_zn9ugf.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
-                                            </a>
-                                        </noscript>
-                                        <!-- ^^^ code from Ad site ^^^ -->
-                                    </div>
-
-                                    </div>
-                                </div>
+                            <div class="d-none d-lg-block col-md-auto web-ad m-0"> <!-- lg Web Ad -->
+                                <!-- vvv code from Ad site vvv --> 
+                                <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralTopBottom&pub=848887&format=728x90&ga=g"></script>
+                                <noscript>
+                                    <a href="https://yllix.com/publishers/848887" target="_blank">
+                                        <img src="//ylx-aff.advertica-cdn.com/pub/728x90.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
+                                    </a>
+                                </noscript>
+                                <!-- ^^^ code from Ad site ^^^ -->
+                            </div>
+                            <div class="d-block d-lg-none col-auto web-ad m-0"> <!-- sm MOB Ad -->
+                                <!-- vvv code from Ad site vvv -->
+                                <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneralTopBottom&pub=848887&format=468x60&ga=g"></script>
+                                <noscript>
+                                    <a href="https://yllix.com/publishers/848887" target="_blank">
+                                        <img src="//ylx-aff.advertica-cdn.com/pub/468x60.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
+                                    </a>
+                                </noscript>
+                                <!-- ^^^ code from Ad site ^^^ -->
+                            </div>
+                            <div class="mob-ad m-0">
+                                <!-- vvv code from Ad site vvv -->
+                                <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneraTopBottom&pub=848887&format=300x50&ga=g"></script>
+                                <noscript>
+                                    <a href="https://yllix.com/publishers/848887" target="_blank">
+                                        <img src="//ylx-aff.advertica-cdn.com/pub_zn9ugf.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
+                                    </a>
+                                </noscript>
+                                <!-- ^^^ code from Ad site ^^^ -->
                             </div>
 
                         </div>
