Display HatchWays + TripleByte info

--- a/templates/pages/swe_career_guide.html
+++ b/templates/pages/swe_career_guide.html
@@ -238,23 +238,31 @@
                             <li>Once you get a job Build your professional network!</li>
                         </ul>
                     </li>
-                    <!-- Can't find Hatchways I know it exists, not sure what's going on. -->
-                    <!-- <li> 
+                    <li class="pt-3"> 
                         <a href="https://app.hatchways.io/">HatchWays.io</a></span>
+                        <br>
+                        <b><span style="color: red;">*</span>Important: </b>
+                        <br>
+                        <p>I am currently <b>unable to locate the Hatchways</b> platform for engineers/developers, and I'm unsure what's going on. I've chosen to retain the information here in the event that you can still access it, as it remains a valuable resource, despite my inability to utilize it.</p>
+                        
                         <ul>
                             <li>Utilizing this program as a pathway to secure employment can be challenging, as Hatcdhways suggests that having a four-year degree is preferable. Nevertheless, if you possess the skills to develop projects using the technologies they assess, there is still potential to secure a job with their support.</li>
                             <li>for job sekers with no prior real world paid work experence (Internships & projects do not count as experence here) there program will help you inorder to get your foot in the door and land a job in tech.</li>
                             <li>Once you get a job Build your professional network!</li>
                         </ul>
-                    </li> -->
-                    <!-- Can't find Triple Byte I know it exists, not sure what's going on. -->
-                    <!-- <li> 
-                        <a href="https://triplebyte.com">HatchWays.io</a></span>
+                    </li>
+                    <li class="pt-3"> 
+                        <a href="https://triplebyte.com">TripleByte.com</a></span>
+                        <br>
+                        <b><span style="color: red;">*</span>Important: </b>
+                        <br>
+                        <p>At present, <b>I am unable to find the Triple Byet platform</b>, and I am uncertain what's going on. I have opted to preserve this information here in case you are still able to access it, recognizing its continued value even though I am unable to personally utilize it.</p>
+                    
                         <ul>
-                            <li>...</li>
-                            <li>...</li>
+                            <li>Participate in assessments, and they will assist you in securing employment</li>
+                            <li>I have personally encountered an individual who went directly from high school to securing a position at Apple through Triple Byet, despite the fact that Triple Byte emphasizes the importance of a four-year degree.</li>
                         </ul>
-                    </li> -->
+                    </li>
                     <!-- ***TODO: Research to better understand
                     <li>
                         <a href="https://www.codepath.org">CodePath.org</a>
