--- a/templates/pages/code_solutions/search_solutions.html
+++ b/templates/pages/code_solutions/search_solutions.html
@@ -8,12 +8,12 @@
     <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 row-cols-xl-5 row-cols-xxl-6"> <!-- *SEARCH RES* -->
 
         <div class="col">
-            <div class="card h-100">
+            <a class="card h-100 btn btn-outline-secondary" href="/code_solution/9827643rb27b27v">
                 <div class="card-body">
                     <h5 class="card-title text-center">3 Sum</h5>
                     <p class="card-text text-center">LeetCode</p>
                 </div>
-            </div>
+            </a>
         </div>
         
         <div class="col">
