color + coding solution pg

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Get In Tech</title>
+        <title>Tech Career Time</title>
 
         <!-- Mobile meta req -->
         <meta charset="utf-8" />
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 
     <!-- <body style="background: linear-gradient(176deg, rgba(242, 242, 242, 0.95) 0%, #00C2FF 99.65%);"> -->
-        <body>
+        <body style="background: linear-gradient(176deg, rgba(242, 242, 242, 0.95) 0%, #00C2FF 99.65%)">
 
         <!-- nav -->
         <!-- TODO: >>> UX/UI Figma Design -->
@@ -62,9 +62,9 @@
             </div>
           </nav> -->
 
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-lg bg-white">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="/">Get In Tech</a>
+                    <a class="navbar-brand" href="/">Tech Career Time</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button> 
@@ -79,8 +79,8 @@
                                 <a class="nav-link" href="/swe_career_guide">SWE Career Guide</a>
                             </li>
                         </ul>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <form class="d-flex bg-body-tertiary" role="search">
+                            <input class="form-control me-2" style="background: #E4F0F1;border: none;" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-outline-dark" type="submit">Search</button>
                         </form>
                     </div>
@@ -95,9 +95,9 @@
 
 
         <!-- Footer -->
-        <footer class="text-center text-lg-start bg-white text-muted">
+        <footer class="text-center text-lg-start text-muted border-top" style="background: linear-gradient(200deg, rgba(0, 194, 255, 0.95) 25.76%, rgba(130, 220, 248, 0.95) 52.73%, rgba(242, 242, 242, 0.95) 76.04%)">
             <!-- Section: Social media -->
-            <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+            <section class="d-flex justify-content-center justify-content-lg-between p-4">
           
             <!-- Right -->
             </section>
@@ -142,7 +142,7 @@
             <!-- Section: Links  -->
         
             <!-- Copyright -->
-            <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
+            <div class="text-center p-4">
             © 2023 Copyright:
             <a class="text-reset fw-bold" href="/">Get In Tech</a>
             </div>
