--- a/templates/pages/code_solutions/search_solutions.html
+++ b/templates/pages/code_solutions/search_solutions.html
@@ -9,7 +9,7 @@
 
         {% for solution in solutions %}
         <div class="col">
-            <a class="card h-100 btn btn-outline-secondary" href="/code_solution/{{ solution._id }}">
+            <a class="card h-100 btn btn-outline-dark" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);" href="/code_solution/{{ solution._id }}">
                 <div class="card-body ">
                     <h5 class="card-title text-center">{{solution.name}}</h5>
                     <p class="card-text text-center">{{solution.site}}</p>
