--- a/templates/ads.html
+++ b/templates/ads.html
@@ -13,14 +13,16 @@
                         <div class="text-center px-1 pt-0 m-0">
 
                             <div class="d-none d-lg-block col-md-auto web-ad m-0 pt-5"> <!-- lg Web Ad -->
-                                <!-- vvv code from Ad site vvv --> 
-                                <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralTopBottom&pub=848887&format=728x90&ga=g"></script>
-                                <noscript>
-                                    <a href="https://yllix.com/publishers/848887" target="_blank">
-                                        <img src="//ylx-aff.advertica-cdn.com/pub/728x90.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
-                                    </a>
-                                </noscript>
-                                <!-- ^^^ code from Ad site ^^^ -->
+                                <div class="pt-1 px-1" ">
+                                    <!-- vvv code from Ad site vvv --> 
+                                    <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralTopBottom&pub=848887&format=728x90&ga=g"></script>
+                                    <noscript>
+                                        <a href="https://yllix.com/publishers/848887" target="_blank">
+                                            <img src="//ylx-aff.advertica-cdn.com/pub/728x90.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
+                                        </a>
+                                    </noscript>
+                                    <!-- ^^^ code from Ad site ^^^ -->
+                                </div>
                             </div>
                             <div class="d-block d-lg-none col-auto web-ad m-0 pt-5"> <!-- sm MOB Ad -->
                                 <!-- vvv code from Ad site vvv -->
@@ -104,6 +106,12 @@
                     <!-- ^^^ code from Ad site ^^^ -->
                 </div>
             </div> 
+
+            <!-- <scritp>
+                TODO: Add this to Ads man iframe tag
+                class="m-1"
+                style="width:728px !important;height:90px !important; border-radius: 5px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);"
+            </scritp> -->
 
         </div>
     </div>
