--- a/templates/ads.html
+++ b/templates/ads.html
@@ -12,7 +12,7 @@
                     <div class="col-12 m-0">
                         <div class="text-center px-1 pt-0 m-0">
 
-                            <div class="d-none d-lg-block col-md-auto web-ad m-0 pt-5"> <!-- lg Web Ad -->
+                            <div class="d-none d-xl-block col-md-auto web-ad m-0 pt-5 ads"> <!-- lg Web Ad -->
                                 <div class="pt-1 px-1" ">
                                     <!-- vvv code from Ad site vvv --> 
                                     <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralTopBottom&pub=848887&format=728x90&ga=g"></script>
@@ -24,7 +24,7 @@
                                     <!-- ^^^ code from Ad site ^^^ -->
                                 </div>
                             </div>
-                            <div class="d-block d-lg-none col-auto web-ad m-0 pt-5"> <!-- sm MOB Ad -->
+                            <div class="d-block d-xl-none col-auto web-ad m-0 pt-5 ads"> <!-- sm MOB Ad -->
                                 <!-- vvv code from Ad site vvv -->
                                 <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneralTopBottom&pub=848887&format=468x60&ga=g"></script>
                                 <noscript>
@@ -34,7 +34,7 @@
                                 </noscript>
                                 <!-- ^^^ code from Ad site ^^^ -->
                             </div>
-                            <div class="mob-ad m-0">
+                            <div class="mob-ad m-0 ads">
                                 <!-- vvv code from Ad site vvv -->
                                 <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneraTopBottom&pub=848887&format=300x50&ga=g"></script>
                                 <noscript>
@@ -56,7 +56,7 @@
                     <div class="col-12 m-0">
                         <div class="text-center px-1 pt-0 m-0">
 
-                            <div class="d-none d-lg-block col-md-auto web-ad m-0 pt-5"> <!-- lg Web Ad -->
+                            <div class="d-none d-xl-block col-md-auto web-ad m-0 pt-5 ads"> <!-- lg Web Ad -->
                                 <!-- vvv code from Ad site vvv --> 
                                 <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralTopBottom&pub=848887&format=728x90&ga=g"></script>
                                 <noscript>
@@ -66,7 +66,7 @@
                                 </noscript>
                                 <!-- ^^^ code from Ad site ^^^ -->
                             </div>
-                            <div class="d-block d-lg-none col-auto web-ad m-0 pt-5"> <!-- sm MOB Ad -->
+                            <div class="d-block d-xl-none col-auto web-ad m-0 pt-5 ads"> <!-- sm MOB Ad -->
                                 <!-- vvv code from Ad site vvv -->
                                 <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneralTopBottom&pub=848887&format=468x60&ga=g"></script>
                                 <noscript>
@@ -76,7 +76,7 @@
                                 </noscript>
                                 <!-- ^^^ code from Ad site ^^^ -->
                             </div>
-                            <div class="mob-ad m-0">
+                            <div class="mob-ad m-0 ads">
                                 <!-- vvv code from Ad site vvv -->
                                 <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneraTopBottom&pub=848887&format=300x50&ga=g"></script>
                                 <noscript>
@@ -95,7 +95,7 @@
 
             <!-- Right content -->
             <div class="d-none d-lg-block col-lg-auto mx-auto pt-5 mt-5"> 
-                <div class="sticky-top pt-5">
+                <div class="sticky-top pt-5 web-ad ads">
                     <!-- vvv code from Ad site vvv -->
                     <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralSide&pub=848887&format=160x600&ga=g"></script>
                     <noscript>
@@ -110,7 +110,7 @@
             <!-- <scritp>
                 TODO: Add this to Ads man iframe tag
                 class="m-1"
-                style="width:728px !important;height:90px !important; border-radius: 5px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);"
+                style += "border-radius: 5px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);"
             </scritp> -->
 
         </div>
