--- a/templates/pages/code_solutions/search_solutions.html
+++ b/templates/pages/code_solutions/search_solutions.html
@@ -5,7 +5,7 @@
 <main>
     
     <!-- Main content -->
-    <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 row-cols-xl-5 row-cols-xxl-6"> <!-- *SEARCH RES* -->
+    <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 row-cols-xl-5 row-cols-xxl-6 m-0"> <!-- *SEARCH RES* -->
 
         {% for solution in solutions %}
         <div class="col">
