--- a/templates/pages/swe_career_guide.html
+++ b/templates/pages/swe_career_guide.html
@@ -231,6 +231,14 @@
 
                 <ol type="A">
                     <li>
+                        <a href="https://www.workitdaily.com/">WorkItDaily.com</a>
+                        <ul>
+                            <li>Subjected to monthly billing (At a significantly lower rate than competitors).</li>
+                            <li>For job seekers who are willing to put in the effort required to secure a job on their own.</li>
+                            <li>Provides instruction not only on securing employment but also on cultivating your professional network to ensure a continuous ability to find job opportunities.</li>
+                        </ul>
+                    </li>
+                    <li>
                         <a href="https://www.pathrise.com">Pathrise.com</a>
                         <ul>
                             <li>Cost money upfront or ISA (income share agreement)</li>
