--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -23,7 +23,7 @@
                     3. Seek assistance in job placement through programs like...
                 </p>
                 <p class="p-3"><i>With these steps accomplished, you'll be well-prepared to pursue your desired Software Engineer position.</i></p>
-                <a href="#steps" type="button" class="btn btn-outline-secondary">Comprehensive Step-by-Step Guide</a>
+                <a href="/swe_career_guide" type="button" class="btn btn-outline-secondary">Comprehensive Step-by-Step Guide</a>
 
             </div>
         </div>
@@ -45,7 +45,7 @@
                 <p>
                     Here, you will discover a dedicated search engine designed to assist you in finding the appropriate website housing the solution to your coding challenge.
                 </p>
-                <a href="/code_solutions" type="button" class="btn btn-outline-secondary">Search now</a>
+                <a href="/search_solutions" type="button" class="btn btn-outline-secondary">Search now</a>
 
             </div>
         </div>
