--- a/templates/base.html
+++ b/templates/base.html
@@ -115,7 +115,7 @@
                 <!-- Grid column -->
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-4">
                     <p>
-                        <a href="#!" class="text-reset">Home page</a>
+                        <a href="/" class="text-reset">Home page</a>
                     </p>
                     <p>
                         <a href="/search_solutions" class="text-reset">Coding Solutions</a>
