--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,9 @@
         <!-- my styles -->
         <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 
+        <!-- google adsense -->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3187955226926821" crossorigin="anonymous"></script>
+
     </head>
     <!-- <body style="background: linear-gradient(176deg, rgba(242, 242, 242, 0.95) 0%, #00C2FF 99.65%);"> -->
         <body style="background: linear-gradient(176deg, rgba(242, 242, 242, 0.95) 0%, #00C2FF 99.65%)">
