p-<sm-md> on code sol

--- a/templates/pages/code_solutions/code_solution.html
+++ b/templates/pages/code_solutions/code_solution.html
@@ -9,12 +9,12 @@
 <main>
 
     <!-- 1st Content box -->
-    <div class="row py-2 m-0">
-        <div class="col-12 m-0">
-            <div class="p-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
+    <div class="row py-0 py-md-2 m-0">
+        <div class="col-12 p-0 m-0">
+            <div class="p-0 p-md-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
 
                 <div class="row py-2 m-0 text-center">
-                    <h3 class="col-12 m-0">{{ name}}</h3>
+                    <h3 class="col-12 m-0">{{name}}</h3>
                 </div>
 
                 <!-- Carousel  -->
@@ -22,7 +22,7 @@
                     <div class="row py-2 text-center">
                         
                         <!-- Move Carousel left -->
-                        <div class="col m-0" type="button" data-bs-target="#carouselExampleDark"  lightgray;" data-bs-slide="prev">
+                        <div class="col m-0" type="button" data-bs-target="#carouselExampleDark  lightgray;" data-bs-slide="prev">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-compact-left" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223z"/>
                             </svg>
@@ -59,7 +59,7 @@
                     </div>
                 {% endif %}
 
-                <div class="row py-2 m-0">
+                <div class="row ppy-2 m-0">
 
                     <!-- Folder like tabs -->
                     <nav>
