--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,14 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+        <!-- add loge to tab on web browser -->
+        <link rel="icon" href="{{ url_for('static', filename='img/logo.png') }}" type="image/x-icon" />
+
         <!-- boostrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
         <!-- my styles -->
-        <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 
         <!-- google adsense -->
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3187955226926821" crossorigin="anonymous"></script>
@@ -19,6 +22,7 @@
     </head>
     <!-- <body style="background: linear-gradient(176deg, rgba(242, 242, 242, 0.95) 0%, #00C2FF 99.65%);"> -->
         <body style="background: linear-gradient(176deg, rgba(242, 242, 242, 0.95) 0%, #00C2FF 99.65%)">
+
 
         <!-- nav -->
         <!-- TODO: >>> UX/UI Figma Design -->
@@ -66,9 +70,11 @@
             </div>
           </nav> -->
 
-            <nav class="navbar navbar-expand-lg bg-white">
+            <nav class="navbar navbar-expand-lg bg-white p-0">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="/">Tech Career Time</a>
+                    <a class="navbar-brand m-0 p-1" href="/">
+                        <image clsss='m-0 p-0' src="{{ url_for('static', filename='img/logo.png') }}" alt="logo" style="width: 45px; height: 45px; margin: 0 auto; display: block;"/>
+                    </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button> 
