--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,1 +1,46 @@
-/* css/styles.css >>> test */
+/* nav  */
+#search { /* nav Search */
+    border: none; 
+    border-radius: 2px; 
+    background: #E4F0F1 url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath fill='%237D7D7D' d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat 13px center;
+    padding-left: 35px;
+}
+
+/* *{
+    padding: 0px;
+    margin: 0px;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    border: 3px solid rgba(0, 0, 0, 0.494);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0%;
+    background: rgba(0, 0, 0, 0.502)ne repeat scroll 0% 0%;
+    opacity: 0.5;
+    z-index: 1004;
+    cursor: wait;
+    right: 0px;
+} */
+
+
+.nav-bar-page-link{
+    padding-top: 2px;
+    padding-bottom: 2px;
+    background-color: #F4FAFB; 
+    border-radius: 7px; 
+    width: 150px; 
+    border: 1px solid #D4D4D4;
+    border-top: none
+}
+
+.nav-bar-page-link:hover {
+    border: 2px solid #D4D4D4;
+    border-top: none
+}
+
+.nav-bar-page-link:active {
+    border: 2px solid #D4D4D4;
+    border-top: none;
+    background-color: #E4F0F1; 
+}
