--- a/templates/ads.html
+++ b/templates/ads.html
@@ -13,7 +13,7 @@
                         <div class="text-center px-1 pt-0 m-0">
 
                             <div class="d-none d-xl-block col-md-auto web-ad m-0 pt-5 ads"> <!-- lg Web Ad -->
-                                <div class="pt-1 px-1" ">
+                                <div class="pt-1 px-1" >
                                     <!-- vvv code from Ad site vvv --> 
                                     <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralTopBottom&pub=848887&format=728x90&ga=g"></script>
                                     <noscript>
