--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -5,7 +5,7 @@
 <main>
 
     <!-- 1st Content box -->
-    <div class="row py-2 m-0">
+    <div class="row py-2 pb-5 m-0">
         <div class="col-12 m-0">
             <div class="p-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
 
@@ -23,14 +23,14 @@
                     3. Seek assistance in job placement through programs like...
                 </p>
                 <p class="p-3"><i>With these steps accomplished, you'll be well-prepared to pursue your desired Software Engineer position.</i></p>
-                <a href="/swe_career_guide" type="button" class="btn btn-outline-secondary">Comprehensive Step-by-Step Guide</a>
+                <a href="/swe_career_guide" type="button" class="btn btn-outline-dark" style="float: right;">Comprehensive Step-by-Step Guide</a>
 
             </div>
         </div>
     </div>
 
     <!-- 2nd Content box -->
-    <div class="row py-2 m-0">
+    <div class="row py-2 pb-5 m-0">
         <div class="col-12 m-0"> 
             <div class="p-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
 
@@ -45,7 +45,7 @@
                 <p>
                     Here, you will discover a dedicated search engine designed to assist you in finding the appropriate website housing the solution to your coding challenge.
                 </p>
-                <a href="/search_solutions" type="button" class="btn btn-outline-secondary">Search now</a>
+                <a href="/search_solutions" type="button" class="btn btn-outline-dark" style="float: right;">Search now</a>
 
             </div>
         </div>
