--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,8 +1,8 @@
 /* nav  */
 #search { /* nav Search */
     border: none; 
-    border-radius: 2px; 
-    background: #E4F0F1 url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath fill='%237D7D7D' d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat 13px center;
+    border-radius: 3px; 
+    background: #F4FAFB url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath fill='%237D7D7D' d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat 13px center;
     padding-left: 35px;
 }
 
@@ -40,7 +40,26 @@
 }
 
 .nav-bar-page-link:active {
-    border: 2px solid #D4D4D4;
+    border: 1px solid #D4D4D4;
     border-top: none;
-    background-color: #E4F0F1; 
+    background-color: #f8fdfd; 
+}
+
+#svg-menu:hover {
+    /* shadow */
+    box-shadow: 0px 0px 5px 0px #D4D4D4;
+    fill: rgba(0, 0, 0, 0.696);
+}
+
+.dropdown-menu {
+    --bs-dropdown-link-active-bg: #f8fdfd7f;
+    --bs-dropdown-link-active-color: #D4D4D4;
+}
+
+#logo-uper-left-font {
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-variation-settings:
+        "slnt" 0;
 }
