--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,25 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
+        <!-- google fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <!-- 
+            Used for Logo 👇👇👇
+            
+            // <uniquifier>: Use a unique and descriptive class name
+            // <weight>: Use a value from 100 to 900
 
+            .inter-<uniquifier> {
+                font-family: "Inter", sans-serif;
+                font-optical-sizing: auto;
+                font-weight: <weight>;
+                font-style: normal;
+                font-variation-settings:
+                    "slnt" 0;
+            }
+         -->
+        <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Inter:wght@100..900&display=swap" rel="stylesheet">
 
         <!-- my styles -->
         <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
@@ -31,7 +49,7 @@
                     
                     <!-- Logo -->
                     <a class="navbar-brand m-0 p-1 col-1" href="/">
-                        <p class="m-0 p-0 text-center" style="size: 10px; font-size: 10px; width: 50px;">
+                        <p class="m-0 p-0 text-center" id="logo-uper-left-font" style="size: 10px; font-size: 10px; width: 50px;">
                             <b>Tech</b>
                             <br>
                             <b>Career</b>
@@ -42,13 +60,13 @@
 
                     <!-- Search -->
                     <form class="mx-auto col-8 col-md-6 col-lg-4 p-2" role="search">
-                        <!-- <input 
+                        <input 
                             class="form-control me-2" 
                             type="search" 
                             placeholder="Search" 
                             aria-label="Search"
                             id="search"
-                        > -->
+                        >
                     </form>
                     
                     <!-- Web nav -->
@@ -76,15 +94,19 @@
                     <div class="btn-group col-2 col-md-1 mt-2 d-block d-lg-none">
                          
                         <button type="button" style="border: none; background: none;" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="40,8">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                            <svg xmlns="http://www.w3.org/2000/svg" id="svg-menu" width="35" height="35" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
                             </svg>
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end p-0 m-0" style="border-radius: 0px 0px 0px 15px; border: none">
                             <li><hr class="p-0 m-0" style="color: #CDCCCC;"></li>
-                            <li><a class="dropdown-item py-3" href="/search_solutions">Coding Solutions</a></li>
+                            <li>
+                                <a class="dropdown-item py-3 sm-win-web-mob-nav" href="/search_solutions">Coding Solutions</a>
+                            </li>
                             <li class="px-2"><hr class="p-0 m-0" style="color: #CDCCCC;"></li>
-                            <li><a class="dropdown-item py-3" href="/swe_career_guide" style="border-radius: 0px 0px 0px 15px;">SWE Career Guide</a></li>
+                            <li>
+                                <a class="dropdown-item py-3 sm-win-web-mob-nav" href="/swe_career_guide" style="border-radius: 0px 0px 0px 15px;">SWE Career Guide</a>
+                            </li>
                         </ul>
                     </div>
                     
