UI/UX nav + design

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,13 +60,13 @@
 
                     <!-- Search -->
                     <form class="mx-auto col-8 col-md-6 col-lg-4 p-2" role="search">
-                        <input 
+                        <!-- <input 
                             class="form-control me-2" 
                             type="search" 
                             placeholder="Search" 
                             aria-label="Search"
                             id="search"
-                        >
+                        > -->
                     </form>
                     
                     <!-- Web nav -->
