Safari browser bug fix

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
                 <div class="row align-items-start m-0 p-0" >
                     
                     <!-- Logo -->
-                    <a class="navbar-brand m-0 p-1 col-1" href="/">
+                    <a class="navbar-brand m-0 p-1 col-1 m-0" href="/">
                         <p class="m-0 p-0 text-center" id="logo-uper-left-font" style="size: 10px; font-size: 10px; width: 50px;">
                             <b>Tech</b>
                             <br>
@@ -59,7 +59,7 @@
                     </a>
 
                     <!-- Search -->
-                    <form class="mx-auto col-8 col-md-6 col-lg-4 p-2" role="search">
+                    <form class="mx-auto col-8 col-md-6 col-lg-4 p-2 m-0" role="search">
                         <!-- <input 
                             class="form-control me-2" 
                             type="search" 
@@ -70,7 +70,7 @@
                     </form>
                     
                     <!-- Web nav -->
-                    <div class="col-0 col-lg-4 d-none d-lg-block" style="padding-top: 12.5px;">
+                    <div class="col-0 col-lg-4 d-none d-lg-block m-0" style="padding-top: 12.5px;">
                         <div class="row">
 
                             <div class="col-6 m-0">
@@ -91,15 +91,15 @@
                     </div>
 
                     <!-- Small Window; Web/Mobile nav -->
-                    <div class="btn-group col-2 col-md-1 mt-2 d-block d-lg-none">
+                    <div class="btn-group col-2 col-md-1 mt-2 d-block d-lg-none m-0">
                          
-                        <button type="button" style="border: none; background: none;" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="40,8">
+                        <button class="m-0" type="button" style="border: none; background: none;" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="40,5">
                             <svg xmlns="http://www.w3.org/2000/svg" id="svg-menu" width="35" height="35" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
                             </svg>
                         </button>
-                        <ul class="dropdown-menu dropdown-menu-end p-0 m-0" style="border-radius: 0px 0px 0px 15px; border: none">
-                            <li><hr class="p-0 m-0" style="color: #CDCCCC;"></li>
+                        <ul class="dropdown-menu dropdown-menu-end p-0 m-0" style="border-radius: 0px 0px 0px 15px; border: none;">
+                            <!-- <li><hr class="p-0 m-0" style="color: #CDCCCC;"></li> -->
                             <li>
                                 <a class="dropdown-item py-3 sm-win-web-mob-nav" href="/search_solutions">Coding Solutions</a>
                             </li>
@@ -111,7 +111,7 @@
                     </div>
                     
           
-                    <div class="col-0 col-lg-1"></div>
+                    <!-- <div class="col-0 col-lg-1"></div> -->
                  
                         
                 </div>
