--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -56,6 +56,8 @@
     --bs-dropdown-link-active-color: #D4D4D4;
 }
 
+button:focus {outline:0;}
+
 #logo-uper-left-font {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
