--- a/templates/base.html
+++ b/templates/base.html
@@ -91,24 +91,24 @@
                     </div>
 
                     <!-- Small Window; Web/Mobile nav -->
-                    <!-- <div class="btn-group col-2 col-md-1 mt-2 d-block d-lg-none m-0">
+                    <div class="btn-group col-2 col-md-1 mt-2 d-block d-lg-none m-0">
                          
                         <button class="m-0" type="button" style="border: none; background: none;" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="40,5">
-                            <svg xmlns="http://www.w3.org/2000/svg" id="svg-menu" width="35" height="35" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+                            <svg xmlns="http://www.w3.org/2000/svg" id="svg-menu" width="35" height="35" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16" class="m-0">
+                                <path class="m-0" fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
                             </svg>
                         </button>
-                        <ul class="dropdown-menu dropdown-menu-end p-0 m-0" style="border-radius: 0px 0px 0px 15px; border: none;"> -->
+                        <ul class="dropdown-menu dropdown-menu-end p-0 m-0" style="border-radius: 0px 0px 0px 15px; border: none;">
                             <!-- <li><hr class="p-0 m-0" style="color: #CDCCCC;"></li> -->
-                            <!-- <li>
-                                <a class="dropdown-item py-3 sm-win-web-mob-nav" href="/search_solutions">Coding Solutions</a>
+                            <li class="m-0">
+                                <a class="dropdown-item py-3 sm-win-web-mob-nav m-0" href="/search_solutions">Coding Solutions</a>
                             </li>
-                            <li class="px-2"><hr class="p-0 m-0" style="color: #CDCCCC;"></li>
-                            <li>
-                                <a class="dropdown-item py-3 sm-win-web-mob-nav" href="/swe_career_guide" style="border-radius: 0px 0px 0px 15px;">SWE Career Guide</a>
+                            <li class="px-2 m-0"><hr class="p-0 m-0" style="color: #CDCCCC;"></li>
+                            <li class="m-0">
+                                <a class="dropdown-item py-3 sm-win-web-mob-nav m-0" href="/swe_career_guide" style="border-radius: 0px 0px 0px 15px;">SWE Career Guide</a>
                             </li>
                         </ul>
-                    </div> -->
+                    </div>
                     
           
                     <!-- <div class="col-0 col-lg-1"></div> -->
