--- a/templates/base.html
+++ b/templates/base.html
@@ -98,16 +98,16 @@
                                 <path class="m-0" fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
                             </svg>
                         </button>
-                        <!-- <ul class="dropdown-menu dropdown-menu-end p-0 m-0" style="border-radius: 0px 0px 0px 15px; border: none;"> -->
+                        <ul class="dropdown-menu dropdown-menu-end p-0 m-0" style="border-radius: 0px 0px 0px 15px; border: none;">
                             <!-- <li><hr class="p-0 m-0" style="color: #CDCCCC;"></li> -->
-                            <!-- <li class="m-0">
+                            <li class="m-0">
                                 <a class="dropdown-item py-3 sm-win-web-mob-nav m-0" href="/search_solutions">Coding Solutions</a>
                             </li>
                             <li class="px-2 m-0"><hr class="p-0 m-0" style="color: #CDCCCC;"></li>
                             <li class="m-0">
                                 <a class="dropdown-item py-3 sm-win-web-mob-nav m-0" href="/swe_career_guide" style="border-radius: 0px 0px 0px 15px;">SWE Career Guide</a>
                             </li>
-                        </ul> -->
+                        </ul>
                     </div>
                     
           
