--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -45,6 +45,10 @@
     background-color: #f8fdfd; 
 }
 
+#svg-menu{
+    fill: black;
+}
+
 #svg-menu:hover {
     /* shadow */
     box-shadow: 0px 0px 5px 0px #D4D4D4;
